# OpenTune

./: .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  _config.yml  glossary.md  index.md  ini-format.md  mcp.md  protocol.md  quick-start.md  updates.md
docs/accessibility/: m6.md
docs/adr/: 0001-tauri-stack.md  0002-data-driven-ini.md  0003-frontend-stack.md  0004-ecu-simulator.md  0005-license.md  0006-reuse-existing-parsers.md  0007-positioning-vs-libretune.md  0008-ai-integration.md  README.md
docs/compatibility/: m6.md
docs/notes/: m0-m1-handoff.md  m0-m1-review.md  m2-decisions.md  m2-m3-handoff.md  m3-decisions.md  m3-research.md  m4-decisions.md  m4-research.md  m5-decisions.md  m6-decisions.md  m7-decisions.md
docs/releases/: v0.2.0.md
src/: App.a11y.test.tsx  App.integration.test.tsx  App.m6.test.tsx  App.test.tsx  App.tsx  main.tsx  preferences.test.ts  preferences.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/ai/: Cargo.toml
src-tauri/crates/ai/src/: audit.rs  guardrails.rs  lib.rs  registry.rs
src-tauri/crates/analysis/: Cargo.toml
src-tauri/crates/analysis/src/: anomaly.rs  dyno.rs  grid.rs  lib.rs  stats.rs  ve_analyze.rs
src-tauri/crates/analysis/tests/: contract.rs  grid.rs  ve_analyze.rs
src-tauri/crates/datalog/: Cargo.toml
src-tauri/crates/datalog/src/: csv.rs  error.rs  lib.rs  mlg.rs  model.rs
src-tauri/crates/ini/: Cargo.toml
src-tauri/crates/ini/examples/: dump.rs
src-tauri/crates/ini/src/: constants.rs  constants_fields.rs  constants_parser.rs  definition.rs  expr.rs  expr_parser.rs  gauges.rs  gauges_parser.rs  lib.rs  output_channels.rs  output_channels_parser.rs  parser.rs  preprocessor.rs  ui.rs  ui_dialog_parser.rs  ui_parser.rs  ui_table_curve_parser.rs  ui_tokens.rs  ve_analyze.rs  ve_analyze_parser.rs
src-tauri/crates/ini/tests/: constants.rs  contract.rs  expr.rs  gauges.rs  output_channels.rs  parse_comms.rs  preprocessor.rs  real_ini.rs  sample_ini.rs  ui.rs  ve_analyze.rs
src-tauri/crates/ini/tests/fixtures/: minimal_comms.ini  speeduino-constants.ini  speeduino-gauges.ini  speeduino-output-channels.ini  speeduino-ui.ini  speeduino_comms.ini
src-tauri/crates/model/: Cargo.toml
src-tauri/crates/model/src/: codec.rs  diff.rs  edit.rs  lib.rs  tune.rs  value.rs
src-tauri/crates/model/tests/: contract.rs  diff.rs  expr_context.rs  scaling.rs  tune.rs  tune_state.rs
src-tauri/crates/model/tests/common/: mod.rs
src-tauri/crates/project/: Cargo.toml
src-tauri/crates/project/examples/: msq_dump.rs
src-tauri/crates/project/src/: lib.rs  msq.rs
src-tauri/crates/project/tests/: msq.rs
src-tauri/crates/project/tests/common/: mod.rs
src-tauri/crates/protocol/: Cargo.toml
src-tauri/crates/protocol/src/: engine.rs  lib.rs  pages.rs  reconnect.rs
src-tauri/crates/protocol/tests/: contract.rs  ms_protocol.rs  output_channels.rs  pages.rs  reconnect.rs
src-tauri/crates/realtime/: Cargo.toml
src-tauri/crates/realtime/src/: decode.rs  lib.rs  poll.rs
src-tauri/crates/realtime/tests/: contract.rs  decode.rs
src-tauri/crates/simulator/: Cargo.toml
src-tauri/crates/simulator/src/: ecu.rs  lib.rs  memory.rs  och_codec.rs  ve_model.rs
src-tauri/crates/simulator/src/engine/: mod.rs  physics.rs
src-tauri/crates/simulator/tests/: memory.rs  realtime.rs
src-tauri/crates/transport/: Cargo.toml
src-tauri/crates/transport/src/: lib.rs  serial.rs  sim.rs
src-tauri/crates/transport/tests/: contract.rs  sim_transport.rs
src-tauri/crates/updater-verify/: Cargo.toml
src-tauri/crates/updater-verify/src/: lib.rs  main.rs
src-tauri/resources/: speeduino.sample.ini
src-tauri/src/: ai_anthropic.rs  ai_chat.rs  ai_chat_commands.rs  ai_chat_tests.rs  ai_commands.rs  ai_mcp.rs  ai_mcp_server.rs  ai_mcp_server_tests.rs  ai_openai.rs  ai_provider.rs  ai_settings.rs  ai_tools.rs  analysis_bridge.rs  analysis_commands.rs  capture.rs  commands.rs  connection.rs  dto.rs  events.rs  layout.rs  lib.rs  log_bridge.rs  log_commands.rs  log_paths.rs  main.rs  offline_commands.rs  owner.rs  owner_ai_tests.rs  owner_analysis_tests.rs  owner_command.rs  owner_log_tests.rs  owner_logging.rs  owner_ops.rs  owner_recovery.rs  owner_tests.rs  realtime_commands.rs  session.rs  session_diff.rs  tune_commands.rs
src-tauri/tests/: connect_flow.rs  tune_demo.rs
src-tauri/tests/fixtures/: no-och-owner.ini  realtime-owner.ini
src/components/: Connect.tsx  (+1 more)
(+127 files in other folders)
