[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "opentune"
version = "0.1.0"
description = "OpenTune — open-source engine tuning software"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opentune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
opentune-protocol = { path = "crates/protocol" }
opentune-transport = { path = "crates/transport" }
opentune-simulator = { path = "crates/simulator" }
opentune-ini = { path = "crates/ini" }

