[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "opentune"
version = "0.2.0"
description = "OpenTune — open-source engine tuning software"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opentune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.25"
specta-typescript = "=0.0.12"
opentune-protocol = { path = "crates/protocol" }
opentune-transport = { path = "crates/transport" }
opentune-simulator = { path = "crates/simulator" }
opentune-ini = { path = "crates/ini" }
opentune-model = { path = "crates/model" }
opentune-realtime = { path = "crates/realtime" }
# M4 Task 8: SampleSet is the capture ring's export shape (Task 0 seam).
opentune-analysis = { path = "crates/analysis" }
opentune-ai = { path = "crates/ai" }
opentune-project = { path = "crates/project" }
opentune-datalog = { path = "crates/datalog" }
# §9 owner task: mpsc/oneshot channels + spawn_blocking for the blocking
# serial transport. Already in the tree transitively via tauri. `net` added
# in M7 slice 4 task 4 for `tokio::net::TcpListener` (the MCP HTTP server).
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "net"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde_json = "1.0.150"
keyring = { version = "4", features = ["apple-native-keyring-store", "windows-native-keyring-store", "zbus-secret-service-keyring-store"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rand = "0.10"
rmcp = { version = "2.2", features = ["server", "transport-streamable-http-server"] }
# M7 slice 4 task 4: mounts rmcp's `StreamableHttpService` (a tower
# `Service`) and layers the bearer-auth middleware in front of it. Version
# aligned with what rmcp 2.2.0 itself tests against (its dev-dependencies
# pin axum = "0.8").
axum = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }

